<resources>
    <string name="app_name">EasyWait</string>
    <!-- Strings related to login -->

    <string name="debug">false</string>
    <string name="home">Home Image</string>
    <string name="prompt_email">Got an Email ?</string>
    <string name="prompt_name">What should I call you ?</string>
    <string name="prompt_password">Your Password</string>
    <string name="action_signup">Register</string>
    <string name="action_register">Register</string>
    <string name="action_signin">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="queue_id">Queue ID</string>
    <string name="queue_add">Give your Queue a name</string>
    <string name="Queue_cur_position">Current Position</string>
    <string name="queue_name">Queue Name</string>
    <string name="queue_state">Status</string>
    <string name="bookappointment">Book An Appointment</string>
    <string name="availablequeues">Available\nQueues</string>
    <string name="hint_queueid">Queue ID</string>
    <string name="acceptingappointments">Accepting Appointments</string>
    <string name="reference_string">Name your Appointment</string>
    <string name="cancel_appointment">Queue Position to Cancel</string>
    <string name="book">Book</string>
    <string name="cancel">Cancel</string>
    <string name="fetch_appointments">View Appointments</string>
    <string name="all_appointments">Booked Appointments</string>
    <string name="appointment_admin">Appointment Administration</string>
    <string name="publish">Publish Queues</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_appointments">AppointmentsActivity</string>
</resources>
